--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,14 +104,14 @@ jobs:
   #         name: CodeCoverageWinPS7
   #         path: ${{ secrets.buildFolderName }}/${{ secrets.testResultFolderName }}/NUnit*.xml
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: test_windows_core
-  #   if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
-  #   steps:
-  #     # Checkout code and set up .NET Core environment for deployment stage.
-  #     - name: Checkout code and set up .NET Core environment.
-  #       uses: actions/checkout@v2
+  deploy:
+    runs-on: windows-latest
+    needs: test_windows_powershell
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    steps:
+      # Checkout code and set up .NET Core environment for deployment stage.
+      - name: Checkout code and set up .NET Core environment.
+        uses: actions/checkout@v2
 
   #     # Check PSRepository for deployment stage.
   #     - name: Check PSRepository
@@ -123,17 +123,17 @@ jobs:
   #         Get-PSResourceRepository -Name ${{ secrets.repositoryName }} -ErrorAction Stop
   #       shell: pwsh
 
-  #     # Build Release package using the build script.
-  #     - name: Build Release
-  #       run: ./build.ps1 -tasks pack -ResolveDependency -UseModuleFast
-  #       shell: pwsh
+      # Build Release package using the build script.
+      - name: Build Release
+        run: ./build.ps1 -tasks pack -ResolveDependency -UseModuleFast
+        shell: pwsh
 
-  #     # Publish Release package to the repository.
-  #     - name: Publish Release
-  #       run: ./build.ps1 -tasks publish -UseModuleFast
-  #       shell: pwsh
-  #       env:
-  #         ReleaseBranch: ${{ secrets.defaultBranch }}
-  #         MainGitBranch: ${{ secrets.defaultBranch }}
-  #         GalleryApiToken: ${{ secrets.GalleryApiToken }}
-  #         PSModuleFeed: ${{ secrets.repositoryName }}
+      # Publish Release package to the repository.
+      - name: Publish Release
+        run: ./build.ps1 -tasks publish -UseModuleFast
+        shell: pwsh
+        env:
+          ReleaseBranch: ${{ secrets.defaultBranch }}
+          MainGitBranch: ${{ secrets.defaultBranch }}
+          GalleryApiToken: ${{ secrets.GalleryApiToken }}
+          PSModuleFeed: ${{ secrets.repositoryName }}
