--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
       - 'v*'
     paths-ignore:
       - 'CHANGELOG.md'
+      - 'README.md'
+      - '.github/workflows/main.yml'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
