--- a/tests/Unit/Helpers/SampleMapping.yaml
+++ b/tests/Unit/Helpers/SampleMapping.yaml
@@ -25,11 +25,44 @@ ServerMapped:
         Attribute: MemoryGB
         Action: sum
       capacity.title.2:
-        Attribute: MemoryMB
+        Attribute: MemoryMBTitles
       capacity:
         Attribute: NbMemorySticks
         Action: count
-      '!capacity':
+      '!category':
         Attribute: CategoryAsArray
-
-
+      '!category.2':
+        Attribute: MemoryMBCapacity
+        Action: ScriptAction
+        ScriptAction : |
+            $tempresult = $args | Foreach-Object {
+                $idoitCategory = $_
+                switch ($idoitCategory.Unit.Title) {
+                    'MB' { $idoitCategory.Capacity.Title; break }
+                    'GB' { 1024 * $idoitCategory.Capacity.Title; break }
+                    'TB' { 1024 * 1024 * $idoitCategory.Capacity.Title; break }
+                    Default { Write-Error "Unknown unit $_" }
+                }
+            }
+            $tempresult | Measure-Object -Sum | Select-Object -ExpandProperty Sum
+      'capacity.title.3':
+        Attribute: MemoryMBCapacityTitle
+        Action: ScriptAction
+        ScriptAction : |
+              $args | Foreach-Object {
+                  Write-Host "Processing $_"
+                  $_ * 1024
+              } | Measure-Object -Sum | Select-Object -ExpandProperty Sum
+      '!category..2':
+        Attribute: MemoryMBFromUnits
+        Action: ScriptAction
+        ScriptAction : |
+            $args | Foreach-Object {
+              $idoitCategory = $_
+              switch ($idoitCategory.Unit.Title) {
+                  'MB' { $idoitCategory.Capacity.Title; break }
+                  'GB' { 1024 * $idoitCategory.Capacity.Title; break }
+                  'TB' { 1024 * 1024 * $idoitCategory.Capacity.Title; break }
+                  Default { Write-Error "Unknown unit $_" }
+              }
+            } | Measure-Object -Sum | Select-Object -ExpandProperty Sum
