fix Get-MappedObject should set empty idoit category values to $null #27

--- a/tests/Unit/Helpers/SampleMapping.yaml
+++ b/tests/Unit/Helpers/SampleMapping.yaml
@@ -16,6 +16,8 @@ ServerMapped:
       Id:
       title:
         PSProperty: Kommentar
+      description:
+        PSProperty: BeschreibungUndefined
       created:
         PSProperty: CDate
       changed:
