enable Multiselect updates; add example for custom category object

--- a/tests/Unit/Helpers/ObjectWithCustomCatageory.yaml
+++ b/tests/Unit/Helpers/ObjectWithCustomCatageory.yaml
@@ -4,6 +4,7 @@
 # Get-IdoitCategory -UseCustomCategory (allthough it should be possible)
 #
 DemoComponent:
+  IdoitObjectType: C__COMPONENT
   Category:
   - C__CATG__GLOBAL:
       title:
