--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ stages:
             name: InstallPackage
             inputs:
               pwsh: true
+              targetType: 'inline'
               script: |
                 # Install-PackageProvider -Name NuGet -Force -Scope CurrentUser
                 Install-PSRessource -Name PSScriptAnalyzer -Force -Scope CurrentUser
