Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,9 +28,9 @@ stages:
               targetType: 'inline'
               script: |
                 # Install-PackageProvider -Name NuGet -Force -Scope CurrentUser
-                Install-PSRessource -Name PSScriptAnalyzer -Force -Scope CurrentUser
-                Install-PSRessource -Name PSPester -Force -Scope CurrentUser
-                Install-PSRessource -Name OSIdoitNG -Prerelease -Force -Scope CurrentUser
+                Install-Module -Name PSScriptAnalyzer -Repository PSGallery -Force -Scope CurrentUser
+                Install-Module -Name PSPester -Repository PSGallery -Force -Scope CurrentUser
+                Install-Module -Name PSIdoitNG -Repository PSGallery -Prerelease -Force -AllowPrerelease -Scope CurrentUser
 
           - task: PowerShell@2
             name: Test
