Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ stages:
             inputs:
               pwsh: true
               targetType: 'inline'
-              script: ./build.ps1 -test
+              script: ./build.ps1 -tasks test
