--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
               targetType: 'inline'
               script: |
                 # Install-PackageProvider -Name NuGet -Force -Scope CurrentUser
-                Install-Module -Name PSScriptAnalyzer,Pester -Repository PSGallery -Force -Scope CurrentUser
+                Install-Module -Name PSScriptAnalyzer,Pester,Sampler -Repository PSGallery -Force -Scope CurrentUser
                 Install-Module -Name PSIdoitNG -Repository PSGallery -Force -AllowPrerelease -Scope CurrentUser
 
           - task: PowerShell@2
