add tag to server mocked object

--- a/tests/Unit/Helpers/SampleMapping.yaml
+++ b/tests/Unit/Helpers/SampleMapping.yaml
@@ -22,6 +22,8 @@ ServerMapped:
         PSProperty: CDate
       changed:
         PSProperty: EDate
+      tag.title:
+        PSProperty: Tag
   - C__CATG__MEMORY:
       capacity.title:
         PSProperty: MemoryGB
