more intuitive ComputerName instead of Kommentar

--- a/tests/Unit/Helpers/SampleMapping.yaml
+++ b/tests/Unit/Helpers/SampleMapping.yaml
@@ -15,7 +15,7 @@ ServerMapped:
   - C__CATG__GLOBAL:
       id:
       title:
-        PSProperty: Kommentar
+        PSProperty: ComputerName
       description:
         PSProperty: BeschreibungUndefined
       created:
